tests/ui/tuple/coercion-never.stderr
error[E0308]: mismatched types
  --> $DIR/coercion-never.rs:10:6
   |
LL |     ((),) = (loop {},);
   |      ^^     ---------- this expression has type `(!,)`
   |      |
   |      expected `!`, found `()`
   |
   = note:   expected type `!`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/coercion-never.rs:13:20
   |
LL |     let _: ((),) = x;
   |            -----   ^ expected `((),)`, found `(!,)`
   |            |
   |            expected due to this
   |
   = note: expected tuple `((),)`
              found tuple `(!,)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
